--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c39101e5",
+   "id": "0e5c75a6",
    "metadata": {},
    "source": [
     "# 10.3.3 Scrape Mars Data: The News"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e5840b0",
+   "id": "e38851b9",
    "metadata": {},
    "source": [
     "####  Import Dependencies"
@@ -18,12 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "a830c505",
+   "execution_count": 93,
+   "id": "bce6e604",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import Splinter and BeautifulSoup\n",
+    "import pandas as pd\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
     "from webdriver_manager.chrome import ChromeDriverManager"
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d12036d1",
+   "id": "b607fa98",
    "metadata": {},
    "source": [
     "#### Set executable path , then set up the URL (NASA Mars News) for scraping."
@@ -39,8 +40,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "db07f5e7",
+   "execution_count": 33,
+   "id": "fa6ff5b1",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ab4a0f",
+   "id": "45987e58",
    "metadata": {},
    "source": [
     "####  Assign the url and instruct the browser to visit it."
@@ -71,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "74c4ed4a",
+   "execution_count": 25,
+   "id": "32acc44c",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +82,7 @@
        "True"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61917d89",
+   "id": "9d7a245f",
    "metadata": {},
    "source": [
     "#### Set up the HTML parser"
@@ -105,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0cbb0612",
+   "execution_count": 26,
+   "id": "70106b42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5786db",
+   "id": "9914a0b9",
    "metadata": {},
    "source": [
     "####  We'll want to assign the title and summary text to variables we'll reference later. In the next empty cell, let's begin our scraping."
@@ -125,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "518af6a4",
+   "execution_count": 27,
+   "id": "074759a4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Push to Save the Mars InSight Lander's Heat Probe</div>"
+       "<div class=\"content_title\">NASA's Mars 2020 Will Hunt for Microscopic Fossils</div>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98ca3d1d",
+   "id": "9b07ac0e",
    "metadata": {},
    "source": [
     "#### The title is in that mix of HTML in our output—that's awesome! But we need to get just the text, and the extra HTML stuff isn't necessary."
@@ -154,17 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "fd774b0b",
+   "execution_count": 28,
+   "id": "08d1824a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"NASA's Push to Save the Mars InSight Lander's Heat Probe\""
+       "\"NASA's Mars 2020 Will Hunt for Microscopic Fossils\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,17 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "96d0af1e",
+   "execution_count": 29,
+   "id": "d0a670b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"The scoop on the end of the spacecraft's robotic arm will be used to 'pin' the mole against the wall of its hole.\""
+       "\"A new paper identifies a ring of minerals at the rover's landing site that are ideal for fossilizing microbial life.\""
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e898b469",
+   "id": "621884e8",
    "metadata": {},
    "source": [
     "# 10.3.4 Scrape Mars Data: Featured Image"
@@ -208,8 +209,307 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "id": "c45456cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Splinter and BeautifulSoup\n",
+    "import pandas as pd\n",
+    "from splinter import Browser\n",
+    "from bs4 import BeautifulSoup as soup\n",
+    "from webdriver_manager.chrome import ChromeDriverManager"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e8d337f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 98.0.4758\n",
+      "Get LATEST chromedriver version for 98.0.4758 google-chrome\n",
+      "Driver [/Users/lucypepe/.wdm/drivers/chromedriver/mac64/98.0.4758.102/chromedriver] found in cache\n"
+     ]
+    }
+   ],
+   "source": [
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "1a81c89b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit URL\n",
+    "url = 'https://spaceimages-mars.com'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "b5eaefdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find and click the full image button\n",
+    "full_image_elem = browser.find_by_tag('button')[1]\n",
+    "full_image_elem.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "3ab27609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse the resulting html with soup\n",
+    "html = browser.html\n",
+    "img_soup = soup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "cc527ad4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'image/featured/mars2.jpg'"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the relative image url\n",
+    "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
+    "img_url_rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "190df60f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the base URL to create an absolute URL\n",
+    "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
+    "img_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb9b6d5",
+   "metadata": {},
+   "source": [
+    "# 10.3.5 Scrape Mars Data: Mars Facts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "a5a4d6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diameter:</th>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Distance from Sun:</th>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Year:</th>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Mars            Earth\n",
+       "description                                              \n",
+       "Mars - Earth Comparison             Mars            Earth\n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com/')[0]\n",
+    "df.columns=['description', 'Mars', 'Earth']\n",
+    "df.set_index('description', inplace=True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "2084b4f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "f5037ea0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ce05650",
+   "metadata": {},
+   "source": [
+    "# 10.3.6 Export to Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3405e84a",
+   "metadata": {},
+   "source": [
+    "# 10.4.1 Store the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f9b1aa8",
+   "metadata": {},
+   "source": [
+    "# 10.5.1 Use Flask to Create a Web App"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ecd6b68",
+   "metadata": {},
+   "source": [
+    "# 10.5.2 Update the Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d462206",
+   "metadata": {},
+   "source": [
+    "# 10.5.3 Integrate MongoDB Into the Web App"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0bf33864",
+   "id": "9b072aba",
    "metadata": {},
    "outputs": [],
    "source": []
